# onu_refactor

./: .gitignore  Cargo.toml  README.md  ackermann.ll  ackermann_bin  benchmark.sh  benchmark_results.txt  build.rs  cbench_ackermann  cbench_ackermann.c  cbench_collatz  cbench_collatz.c  cbench_fib  cbench_fib.c  cbench_fib_memo  cbench_fib_naive  cbench_fib_naive.c  cbench_gcd.c  cbench_hanoi.c  cbench_hashmap.c  cbench_mccarthy91.c  cbench_pepin.c  cbench_primal_scroll.c  cbench_rule110.c  cbench_sha256.c  cbench_tak.c  cbenchmark  cbenchmark.c  cbenchmark.txt  cbenchmark_bin  cbenchmark_memo.c  collatz.ll  collatz_bench.ll  collatz_bench_bin  collatz_benchmark.onu  collatz_bin  dhat.out.5292  echo_demo.ll  error.txt  execution_results.txt  (+52 more)
.cargo/: config.toml
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/arity_arch_refactor_20260227/: index.md  metadata.json  spec.md
conductor/archive/mir_lowering_decomp_20260301/: index.md  plan.md  spec.md
conductor/archive/mir_type_enrichment_20260227/: index.md  metadata.json  spec.md
conductor/archive/pure_llvm_opts_20260303/: metadata.json
conductor/archive/tco_20260303/: metadata.json
conductor/tracks/arity_arch_refactor_20260227/: plan.md
conductor/tracks/mir_lowering_decomp_20260301/: metadata.json  plan.md  spec.md
conductor/tracks/mir_type_enrichment_20260227/: plan.md
conductor/tracks/pure_llvm_opts_20260303/: index.md  plan.md  spec.md
conductor/tracks/tco_20260303/: index.md  plan.md  spec.md
issues/: Arithmetic_Operation_Destination_Type_Issue.md  Implicit_Zero_Extension.md  Incorrect_Zero_Extension_Issue.md  Memory_Alignment_Failures_Issue.md  N_Dim_Memoization_Segfault_and_Pipeline_Ordering.md  Result_Type_of_Arithmetic_Operations_Issue.md
reports/: God_Class_Audit.md  benchmark_verification_report.txt  massif_dhat_report.txt  optimization_benchmark_report.md  sha256_overhead_report.md
samples/: ackermann.onu  ackermann_bench.onu  bf.onu  bsort.onu  bsort_hard.onu  collatz.onu  collatz_bench.onu  complex_args_tco.onu  deep_recursion.onu  deep_sum.c  deep_sum.onu  djb2_hash.onu  echo_demo.onu  factorial.onu  fib_bench.onu  fib_loop.onu  fib_naive_only.onu  fibonacci.onu  gcd_measure.onu  guess.onu  hanoi.onu  hello_world.onu  hello_world_int.onu  illegal_shared.onu  map_bench.onu  map_shapes.onu  mccarthy91.onu  memory_escape_tco.onu  mutation.onu  mutual_recursion.onu  parity.onu  pepin_test.onu  primal_scroll.onu  rule110.onu  sample.onu  sha256.onu  svo_e2e.onu  tak_balance.onu  test_logic.onu  test_ownership.onu  (+3 more)
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/codegen/: compat.rs  mod.rs  stdlibdeclarator.rs  strategies.rs  typemapper.rs
src/adapters/codegen/platform/: mod.rs  wasm32.rs  x86_64.rs
src/adapters/lexer/: mod.rs
src/adapters/parser/: matrix_parser.rs  mod.rs  svo_parser.rs
src/adapters/parser/helpers/: error_recovery.rs  mod.rs
src/application/: mod.rs  options.rs
src/application/ports/: compiler_ports.rs  environment.rs  hardware_intrinsic_port.rs  mod.rs
src/application/use_cases/: analysis_service.rs  codegen_profile.rs  idiom_recognizer_pass.rs  inline_pass.rs  inline_pass.rs.orig  integer_upgrade_pass.rs  layout_service.rs  lifetime_pass.rs  lowering_service.rs  memo_pass.rs  mir_builder.rs  mir_lowering_service.rs  mod.rs  module_bootstrap.rs  module_service.rs  promotion_pass.rs  registry_service.rs  safety_pass.rs  stdlib_lowering.rs  tco_pass.rs  wide_div_legalization_pass.rs
src/application/use_cases/analyzer/: mod.rs  semantic_analyzer.rs  visitor.rs
src/application/use_cases/memo_strategies/: compound_memo_strategy.rs  hash_memo_strategy.rs  mod.rs  primitive_memo_strategy.rs
src/application/use_cases/mir_lowering/: lower_blocks.rs  lower_calls.rs  lower_control_flow.rs  lower_expr.rs  mod.rs
src/application/use_cases/stages/: codegen_stage.rs  hir_stage.rs  lex_stage.rs  mir_stage.rs  mir_stage.rs.rej  mod.rs  parse_stage.rs  realization_stage.rs
src/application/use_cases/stdlib/: as_text.rs  char_at.rs  char_from_code.rs  duplicated_as.rs  init_of.rs  joined_with.rs  len.rs  mod.rs  set_char.rs  sha256_k.rs  write_hex_word.rs
src/domain/: mod.rs
src/domain/entities/: ast.rs  core_module.rs  error.rs  hir.rs  mir.rs  mir.rs.orig  mod.rs  registry.rs  types.rs
src/domain/rules/: droppolicy.rs  dry_enforcement.rs  liveness.rs  mod.rs  ownership.rs
src/infrastructure/: mod.rs
src/infrastructure/cli/: mod.rs  parser.rs  repl.rs
src/infrastructure/extensions/: io.rs
src/infrastructure/os/: mod.rs
src/infrastructure/wasm/: api.rs  mod.rs
test_output/: ackermann.txt  benchmark_results.txt  c_comparison_bench.txt  collatz.txt  collatz_bench.txt  factorial.txt  fibonacci.txt  parity.txt  test_logic.txt  test_ownership.txt  test_recursion.txt
tests/: benchmarktest.rs  c_comparison_test.rs  fibonacci_memory_test.rs  front_end_fix_test.rs  hir_test.rs  hypothesis_test.onu  inline_pass_test.rs  memo_integrity_test.rs  memo_pass_test.rs  memo_sentinel_test.rs  module_test.rs  opt_test.rs  parser_test.rs  pipeline_test.rs  repro_factorial.rs  repro_tco.rs  samples_test.rs  samplestest.rs  tco_pass_test.rs  tco_test.rs  valgrindtest.rs  wasm_codegen_test.rs
web/: app.js  index.html  manifest.json  service-worker.js
