[package]
name = "onu_refactor"
version = "0.1.0"
edition = "2024"

# ── LLVM version features ─────────────────────────────────────────────────────
# Select exactly ONE llvm* feature at build time.  The default is LLVM 14,
# which is the only version currently fully supported because the codegen layer
# uses the typed-pointer LLVM API (ptr_type, bitcast, const_cast) that was
# removed in LLVM 16.
#
# To build against a different LLVM installation:
#
#   cargo build --no-default-features --features llvm16
#   LLVM_SYS_160_PREFIX=/usr/lib/llvm-16 cargo build --no-default-features --features llvm16
#
# NOTE: LLVM 15 requires the `typed-pointers` inkwell sub-feature (deprecated
# but still present).  LLVM 16+ requires a codegen refactor to opaque pointers.
#
[features]
default = ["llvm14"]
# ── local relay flag ─────────────────────────────────────────────────────────
# `typed-pointers` is set whenever the selected LLVM version uses the
# typed-pointer inkwell API (LLVM 14 and LLVM 15 with typed-pointers).
# Our src/adapters/codegen/compat.rs uses `#[cfg(feature = "typed-pointers")]`
# to pick the right API at compile time.  LLVM 16+ leaves this flag unset,
# activating the opaque-pointer path in compat.rs.
typed-pointers = ["inkwell/typed-pointers"]
llvm14  = ["inkwell/llvm14-0", "typed-pointers"]   # LLVM 14 — typed only
llvm15  = ["inkwell/llvm15-0", "typed-pointers"]   # LLVM 15 — opt into typed
llvm16  = ["inkwell/llvm16-0"]                     # LLVM 16 — opaque only
llvm17  = ["inkwell/llvm17-0"]                     # LLVM 17 — opaque only
llvm18  = ["inkwell/llvm18-1"]                     # LLVM 18 — opaque only
llvm19  = ["inkwell/llvm19-1"]                     # LLVM 19 — opaque only
llvm20  = ["inkwell/llvm20-1"]                     # LLVM 20 — opaque only

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
either = "1.15.0"
inkwell = { version = "0.8.0", default-features = false, features = ["target-all"] }
